azure_vnet.tf
# terraform {
#   backend "azurerm" {
#     resource_group_name  = "cloud-shell-storage-eastus"
#     storage_account_name = "terraformbackendteam2"
#     container_name       = "terraformtfstate"
#     key                  = "team2/rds/terraformtfstate"
#     access_key           = "NFUpV6eK17Uz57hdxVSGl9RuP3VEtHeMjzLZ2ql/cS06dChmgukp3BBWKHKDl/+89jj0Aau0HTC4+AStU7mK4A=="
#   }
# }


# Create a resource group
resource "azurerm_resource_group" "terraform" {
  name     = "terraform-resources"
  location = "westus"
}
resource "azurerm_network_security_group" "terraform" {
  name                = "terraform-security-group"
  location            = azurerm_resource_group.terraform.location
  resource_group_name = azurerm_resource_group.terraform.name
}
resource "azurerm_network_security_rule" "terraform" {
  name                        = "test123"
  priority                    = 100
  direction                   = "Outbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "*"
  source_address_prefix       = "*"
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.terraform.name
  network_security_group_name = azurerm_network_security_group.terraform.name
}

# Create a virtual network within the resource group
resource "azurerm_virtual_network" "terraform" {
  name                = "terraform_vnet"
  location            = azurerm_resource_group.terraform.location
  resource_group_name = azurerm_resource_group.terraform.name
  address_space       = ["10.0.0.0/16"]

  subnet {
    name           = "subnet1"
    address_prefix = "10.0.1.0/24"
    security_group = azurerm_network_security_group.terraform.id
  }

  subnet {
    name           = "subnet2"
    address_prefix = "10.0.2.0/24"
    security_group = azurerm_network_security_group.terraform.id
  }
  subnet {
    name           = "subnet3"
    address_prefix = "10.0.3.0/24"
    security_group = azurerm_network_security_group.terraform.id
  }
}
